portfolio, watchlist, theses apis
